--- a/_posts/2020-11-21-First.md
+++ b/_posts/2020-11-21-First.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: مدونتك الآن جاهزة!
+title: التدوينة الأولى
 ---
 
 الخطوة التالية هي وضع الشخصية في مدونتك الشخصية، غير إسم المدونة وشعارها وخياراتها الآخرى بالتعديل على الملف `_config.yml` الموجود في مجلد المدونة كما هو موضح بالصورة.
